--- a/IrofCryptographic/IrofCryptographic/packages.config
+++ b/IrofCryptographic/IrofCryptographic/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="LinqToTwitter" version="2.1.11" targetFramework="net45" />
   <package id="LivetCask" version="1.1.0.0" targetFramework="net45" />
+  <package id="LivetExtensions" version="1.1.0.0" targetFramework="net45" />
 </packages>
