--- a/IrofCryptographic/IrofCryptographic/App.config
+++ b/IrofCryptographic/IrofCryptographic/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+  <appSettings>
+    <add key="consumerKey" value="cGh5Wk94NlRSb3Q1OWZNNURUeGc=" />
+    <add key="consumerSecret" value="djBMNENmQUVNUno5VXp1ZFRRd1JXWEZxVG1CTFpkbXNXVkYxd01rcFBN" />
+  </appSettings>
 </configuration>
